[gd_scene load_steps=4 format=3 uid="uid://wpfgcm4ujef5"]

[ext_resource type="Script" path="res://scene/entity/enemy/turret_straight_line.gd" id="1_juwup"]
[ext_resource type="PackedScene" uid="uid://bw0gf7wfntyqd" path="res://scene/entity/projectile/bullet.tscn" id="2_k1nae"]
[ext_resource type="Texture2D" uid="uid://y4myk5qmqpnq" path="res://assets/temp/player_special_1.png" id="3_33ov6"]

[node name="TurretStraightLine" type="Node2D"]
script = ExtResource("1_juwup")
projectile = ExtResource("2_k1nae")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_33ov6")

[node name="ProjectileSpawn" type="Marker2D" parent="."]
position = Vector2(7, 0)

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 4096.0
autostart = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
